--- a/advancedProgramming/ProjektZTP/MainWindow.xaml
+++ b/advancedProgramming/ProjektZTP/MainWindow.xaml
@@ -5,12 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjektZTP"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded"  >
+        Title="MainWindow" Height="350" Width="825" Loaded="Window_Loaded"  >
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="45,30,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="135" Width="115" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="479*"/>
+            <ColumnDefinition Width="38*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock Name="wyniki" HorizontalAlignment="Left" Margin="45,30,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="135" Width="115" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
         <Button Content="Unoptimized" HorizontalAlignment="Left" Margin="187,30,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Content="Optimized" HorizontalAlignment="Left" Margin="187,74,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         <Button Content="Download" HorizontalAlignment="Left" Margin="187,118,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <ListBox x:Name="listaWynikow" ItemsSource="{Binding}" HorizontalAlignment="Left" Height="203" Margin="390,19,0,0" VerticalAlignment="Top" Width="328">
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+                    <StackPanel>
+                        <TextBlock Text="{Binding Key}"/>
+                        <TextBlock Text="{Binding Value}"/>
+                    </StackPanel>
+                   
+                
+            </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
     </Grid>
 </Window>
